# zwebgetbot

./: .env.json.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
webpage2html/: README  __init__.py  pyproject.toml
