[project]
name = "zwebgetbot"
version = "0.1.0"
description = "My telegram bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "beautifulsoup4>=4.0.0",
    "httpx>=0.28.1",
    "lxml>=5.3.2",
    "webpage2html==1.0.0",
]
[tool.uv.sources]
webpage2html = { path = "webpage2html" }

